--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
+
 {
-  "name": "f8-fullstack-day44",
+  "name": "f8-fullstack-day46be",
   "private": true,
   "version": "0.0.0",
+  "main": "server.js",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "deploy": "vite build && gh-pages -d dist"
+    "deploy": "vite build && gh-pages -d dist",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
@@ -46,5 +50,10 @@
     "globals": "^16.4.0",
     "tw-animate-css": "^1.4.0",
     "vite": "^7.1.7"
-  }
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
+
 }
